Fix nav covering some elements

--- a/css/index.css
+++ b/css/index.css
@@ -158,6 +158,7 @@ nav {
   width: 100%;
   z-index: 999;
   top: 0;
+  height: 100px;
 }
 
 nav a {
@@ -167,7 +168,7 @@ nav a {
 }
 
 .main-container {
-  margin-top: 5vw;
+  margin-top: 100px;
 }
 .main-container .hero {
   text-align: center;
